Figured out how to display clock, now to figure out how to setInterval to add seconds.

--- a/app/css/bundle.css
+++ b/app/css/bundle.css
@@ -1,2 +1,8 @@
 body {
-  background: green; }
+  background-color: #000000; }
+
+#clock {
+  margin-top: 50%;
+  margin-bottom: 50%;
+  color: #FEFEFE;
+  text-align: center; }
