--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,3 +1,16 @@
+$clockColor: #FEFEFE;
+$bground: #000000;
+
+
+
 body {
-  background: green;
+  background-color: $bground;
+}
+
+
+#clock {
+  margin-top: 50%;
+  margin-bottom: 50%;
+  color: $clockColor;
+  text-align: center;
 }
