OK for real, NOW I'm finished with Normal mode.

--- a/app/css/bundle.css
+++ b/app/css/bundle.css
@@ -1,4 +1,9 @@
 #clock {
+  margin: 0;
+  margin-top: 50%;
+  margin-bottom: 50%;
+  border: 10px solid white;
+  color: white;
   font-size: 222px;
   text-align: center;
   font-family: "Lobster", cursive; }
